force-app/main/default/objects/UOM_Conversion__c/UOM_Conversion__c.object-meta.xml
<CustomObject>
    <label>UOM Conversion</label>
    <pluralLabel>UOM Conversions</pluralLabel>
    <nameField>
        <label>Conversion Name</label>
        <displayFormat>UOMC-{0000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Defines conversion factors between units of measure, optionally scoped to a specific product.</description>
</CustomObject>