force-app/main/default/objects/UOM_Conversion__c/fields/Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Conversion_Factor__c</fullName>
    <label>Conversion Factor</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>6</scale>
    <description>Multiply the From UOM quantity by this factor to get the To UOM quantity. E.g., 1 Case = 12 Pieces means factor = 12.</description>
</CustomField>