force-app/main/default/objects/UOM_Conversion__c/fields/From_UOM__c.field-meta.xml
<CustomField>
    <fullName>From_UOM__c</fullName>
    <label>From UOM</label>
    <type>Lookup</type>
    <referenceTo>UOM__c</referenceTo>
    <relationshipLabel>Conversions (From)</relationshipLabel>
    <relationshipName>Conversions_From</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The source unit of measure for this conversion</description>
</CustomField>