force-app/main/default/objects/UOM_Conversion__c/fields/Inverse_Conversion_Factor__c.field-meta.xml
<CustomField>
    <fullName>Inverse_Conversion_Factor__c</fullName>
    <label>Inverse Conversion Factor</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>4</scale>
    <description>Auto-calculated inverse factor (1 / Conversion Factor). Used for reverse conversions.</description>
</CustomField>