force-app/main/default/objects/UOM_Conversion__c/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this conversion rule is currently active</description>
</CustomField>