force-app/main/default/objects/UOM_Conversion__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>UOM Conversions</relationshipLabel>
    <relationshipName>UOM_Conversions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Optional product-specific conversion. If blank, this is a global/default conversion.</description>
</CustomField>