force-app/main/default/objects/UOM_Conversion__c/fields/To_UOM__c.field-meta.xml
<CustomField>
    <fullName>To_UOM__c</fullName>
    <label>To UOM</label>
    <type>Lookup</type>
    <referenceTo>UOM__c</referenceTo>
    <relationshipLabel>Conversions (To)</relationshipLabel>
    <relationshipName>Conversions_To</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The target unit of measure for this conversion</description>
</CustomField>