force-app/main/default/objects/UOM_Conversion__c/validationRules/Conversion_Factor_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Conversion_Factor_Positive</fullName>
    <active>true</active>
    <description>Conversion factor must be greater than zero</description>
    <errorConditionFormula>AND(NOT(ISBLANK(Conversion_Factor__c)), Conversion_Factor__c &lt;= 0)</errorConditionFormula>
    <errorDisplayField>Conversion_Factor__c</errorDisplayField>
    <errorMessage>Conversion Factor must be greater than zero.</errorMessage>
</ValidationRule>