force-app/main/default/objects/UOM_Conversion__c/validationRules/From_To_UOM_Different.validationRule-meta.xml
<ValidationRule>
    <fullName>From_To_UOM_Different</fullName>
    <active>true</active>
    <description>From UOM and To UOM must be different</description>
    <errorConditionFormula>AND(NOT(ISBLANK(From_UOM__c)), From_UOM__c = To_UOM__c)</errorConditionFormula>
    <errorDisplayField>To_UOM__c</errorDisplayField>
    <errorMessage>From UOM and To UOM must be different.</errorMessage>
</ValidationRule>