force-app/main/default/objects/UOM_Conversion__c/listViews/Active_Conversions.listView-meta.xml
<ListView>
    <fullName>Active_Conversions</fullName>
    <columns>NAME</columns>
    <columns>From_UOM__c</columns>
    <columns>To_UOM__c</columns>
    <columns>Conversion_Factor__c</columns>
    <columns>Product__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Active Conversions</label>
</ListView>