force-app/main/default/objects/UOM_Conversion__c/listViews/All_Conversions.listView-meta.xml
<ListView>
    <fullName>All_Conversions</fullName>
    <columns>NAME</columns>
    <columns>From_UOM__c</columns>
    <columns>To_UOM__c</columns>
    <columns>Conversion_Factor__c</columns>
    <columns>Product__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All UOM Conversions</label>
</ListView>