force-app/main/default/objects/UOM_Conversion__c/listViews/Global_Conversions.listView-meta.xml
<ListView>
    <fullName>Global_Conversions</fullName>
    <columns>NAME</columns>
    <columns>From_UOM__c</columns>
    <columns>To_UOM__c</columns>
    <columns>Conversion_Factor__c</columns>
    <columns>Inverse_Conversion_Factor__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Product__c</field>
        <operation>equals</operation>
        <value></value>
    </filters>
    <label>Global Conversions</label>
</ListView>